; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_btrfs-util.c_btrfs_subvol_get_id_fd.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_btrfs-util.c_btrfs_subvol_get_id_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_ioctl_ino_lookup_args = type { i32, i32 }

@BTRFS_FIRST_FREE_OBJECTID = common dso_local global i32 0, align 4
@ENOTTY = common dso_local global i32 0, align 4
@BTRFS_IOC_INO_LOOKUP = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_subvol_get_id_fd(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.btrfs_ioctl_ino_lookup_args, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %8 = getelementptr inbounds %struct.btrfs_ioctl_ino_lookup_args, %struct.btrfs_ioctl_ino_lookup_args* %6, i32 0, i32 0
  store i32 0, i32* %8, align 4
  %9 = getelementptr inbounds %struct.btrfs_ioctl_ino_lookup_args, %struct.btrfs_ioctl_ino_lookup_args* %6, i32 0, i32 1
  %10 = load i32, i32* @BTRFS_FIRST_FREE_OBJECTID, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp sge i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = ptrtoint i32* %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @btrfs_is_filesystem(i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %2
  %23 = load i32, i32* %7, align 4
  store i32 %23, i32* %3, align 4
  br label %42

24:                                               ; preds = %2
  %25 = load i32, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %24
  %28 = load i32, i32* @ENOTTY, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %3, align 4
  br label %42

30:                                               ; preds = %24
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* @BTRFS_IOC_INO_LOOKUP, align 4
  %33 = call i64 @ioctl(i32 %31, i32 %32, %struct.btrfs_ioctl_ino_lookup_args* %6)
  %34 = icmp slt i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %30
  %36 = load i32, i32* @errno, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %3, align 4
  br label %42

38:                                               ; preds = %30
  %39 = getelementptr inbounds %struct.btrfs_ioctl_ino_lookup_args, %struct.btrfs_ioctl_ino_lookup_args* %6, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32*, i32** %5, align 8
  store i32 %40, i32* %41, align 4
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %38, %35, %27, %22
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @btrfs_is_filesystem(i32) #1

declare dso_local i64 @ioctl(i32, i32, %struct.btrfs_ioctl_ino_lookup_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
